@@ -130,11 +130,11 @@ error_string(struct webauth_context *ctx, int code)
     case WA_ERR_BAD_HMAC:          return "HMAC check failed";
     case WA_ERR_RAND_FAILURE:      return "unable to get random data";
     case WA_ERR_BAD_KEY:           return "unable to use key";
-    case WA_ERR_KEYRING_OPENWRITE: return "unable to open keyring for writing";
-    case WA_ERR_KEYRING_WRITE:     return "error writing to keyring file";
-    case WA_ERR_KEYRING_OPENREAD:  return "unable to open keyring for reading";
-    case WA_ERR_KEYRING_READ:      return "error reading from keyring file";
-    case WA_ERR_KEYRING_VERSION:   return "bad keyring version";
+    case WA_ERR_FILE_OPENWRITE:    return "unable to open file for writing";
+    case WA_ERR_FILE_WRITE:        return "error writing to file";
+    case WA_ERR_FILE_OPENREAD:     return "unable to open file for reading";
+    case WA_ERR_FILE_READ:         return "error reading from file";
+    case WA_ERR_FILE_VERSION:      return "bad file data version";
     case WA_ERR_NOT_FOUND:         return "item not found while searching";
     case WA_ERR_KRB5:              return "Kerberos error";
     case WA_ERR_INVALID_CONTEXT:   return "invalid context passed to function";
