@@ -363,11 +363,11 @@ BOOT:
     IV_CONST(WA_ERR_BAD_HMAC);
     IV_CONST(WA_ERR_RAND_FAILURE);
     IV_CONST(WA_ERR_BAD_KEY);
-    IV_CONST(WA_ERR_KEYRING_OPENWRITE);
-    IV_CONST(WA_ERR_KEYRING_WRITE);
-    IV_CONST(WA_ERR_KEYRING_OPENREAD);
-    IV_CONST(WA_ERR_KEYRING_READ);
-    IV_CONST(WA_ERR_KEYRING_VERSION);
+    IV_CONST(WA_ERR_FILE_OPENWRITE);
+    IV_CONST(WA_ERR_FILE_WRITE);
+    IV_CONST(WA_ERR_FILE_OPENREAD);
+    IV_CONST(WA_ERR_FILE_READ);
+    IV_CONST(WA_ERR_FILE_VERSION);
     IV_CONST(WA_ERR_NOT_FOUND);
     IV_CONST(WA_ERR_KRB5);
     IV_CONST(WA_ERR_INVALID_CONTEXT);
