@@ -19,6 +19,11 @@ WebAuth 4.4.0 (unreleased)
     for the WebAuth wire protocol, but were not really useful to clients
     of the library.
 
+    The WA_ERR_KEYRING_* error codes have changed to WA_ERR_FILE_* and
+    will be used for any errors inside the WebAuth library when reading or
+    writing to files.  Now that WebAuth can report rich error messages,
+    there is no need for the codes to be this specific.
+
 WebAuth 4.3.1 (2012-08-08)
 
     Allow WebAuthDoLogout in .htaccess files with AllowOverride
